syntax = "proto3";

import "db_tiup.proto";

option go_package = "./dbpb/;dbpb";

//enum TiupOperatorRecordStatus {
//  Init        = 0;
//  Processing  = 1;
//  Finished    = 2;
//  Error       = 3;
//}
//
//enum TiupOperatorRecordType {
//  Deploy  = 0;
//  Start   = 1;
//  Destroy = 2;
//  List    = 3;
//  Dumpling = 4;
//  Lightning = 5;
//  Backup = 6;
//  Restore = 7;
//  Restart = 8;
//  Stop = 9;
//  Transfer = 10;
//  Upgrade = 11;
//  ScaleOut = 12;
//  ScaleIn = 13;
//  EditGlobalConfig = 14;
//  EditInstanceConfig = 15;
//  Reload = 16;
//}

message TiupOperatorRecord {
  uint64 ID  			= 1;
  string CreatedAt 	= 2;
  string UpdatedAt 	= 3;
  string DeletedAt 	= 4;
  TiupTaskType Type	= 5;
  TiupTaskStatus Status = 6;
  string ErrorStr	= 7;
  string BizID = 8;
}

message CreateTiupOperatorRecordRequest {
  TiupTaskType type = 1;
  // zero means bizID has no effect
  string bizID = 2;
}

message CreateTiupOperatorRecordResponse {
  // zero means ok
  int32 errCode = 1;
  string errStr = 2;
  uint64 id = 3;
}

message UpdateTiupOperatorRecordRequest {
  uint64 id = 1;
  TiupTaskStatus status = 2;
  string errStr = 3;
}

message UpdateTiupOperatorRecordResponse {
  // zero means ok
  int32 errCode = 1;
  string errStr = 2;
}

message FindTiupOperatorRecordByIDRequest {
  uint64 id = 1;
}

message FindTiupOperatorRecordByIDResponse {
  // zero means ok
  int32 errCode = 1;
  string errStr = 2;
  TiupOperatorRecord tiupTask = 3;
}

message GetTiupOperatorRecordStatusByBizIDRequest {
  string bizID = 1;
}

message GetTiupOperatorRecordStatusByBizIDResponse {
  // zero means ok
  int32 errCode = 1;
  string errStr = 2;
  TiupTaskStatus stat = 3;
  string statErrStr = 4;
}
